fixing an overlapping issue in relaxGallery

--- a/menu-footer.css
+++ b/menu-footer.css
@@ -419,7 +419,7 @@
     }
     
     .menuRelax .containRelax{
-        height:1680px;
+        height:1700px;
         width: 90%;
         margin: auto;
     }
